feat: minor copy cleanup

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,17 +36,11 @@
       <div class="col-sm">
         <h1>Masternodes</h1>
         <p>
-          Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization incentive.
-          Running a masternode is rewarded with Akroma.
+          Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization incentive. Running a masternode is rewarded with Akroma.
         </p>
 
         <p>
-          The more nodes a cryptocurrency network has, the more prone it becomes to tampering and attacks.
-        </p>
-
-        <p>
-          To protect against 51% attacks coming from centralized miner farms, the incentives for running a node and mining have been
-          unbundled.
+          The masternode layer will provide the foundation of additional features on the Akroma network.
         </p>
       </div>
     </div>
@@ -59,12 +53,10 @@
       <div class="col-sm">
         <h1>Decentralized Oracles</h1>
         <p>
-          Next generation smart contracts powered by real-world data feeds.
+          Oracles are systems that provide smart contracts with data from outside the network.
         </p>
         <p>
-          Smart contracts aren't so smart without data from the real world. When smart contracts execute, tokens are passed around
-          which have real value. Oracles need to be trusted, therefore, Akroma will be using practical Byzantine fault-tolerance
-          (PBFT).
+          Oracles are one example of the type of features that become possible with a layer of dedicated servers.
         </p>
       </div>
       <div class="col-sm section-image">
@@ -86,21 +78,13 @@
           The Akroma governance model is focused on creating a sustainable application development platform while contributing back
           to the greater community.
         </p>
-
-        <p>
-          Akroma governance will be handled off-chain, follow the Linux Foundation’s model and work to create a Technical Meritocracy
-          using Open Governance.
-        </p>
-
         <p>Key Features:</p>
         <ul>
           <li>Interoperability</li>
           <li>No major protocol changes</li>
           <li>Continuous integration of upstream changes</li>
-          <li>Experience is everything</li>
           <li>Focus on UX (user experience)</li>
           <li>Consumer over Enterprise</li>
-          <li>100% of development funds distributed quarterly</li>
         </ul>
       </div>
     </div>
@@ -127,7 +111,9 @@
                     </tr>
                     <tr>
                       <td>Total Supply</td>
-                      <td class="text-right">100 million</td>
+                      <td class="text-right">
+                          ~ <a class="text-white" style="text-decoration:underline" href="https://medium.com/akroma/akroma-faq-and-ama-674fe45d7dfc">100 million</a>
+                      </td>
                     </tr>
                     <tr>
                       <td>Target Block Time</td>
