--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -12,10 +12,13 @@
     <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+          <a class="nav-link" href="http://bit.ly/2EMQ4E4">Whitepaper</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="https://wallet.akroma.io">Wallet</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://explorer.akroma.io">Blockchain Explorer</a>
+          <a class="nav-link" href="https://explorer.akroma.io">Explorer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://stats.akroma.io">Network</a>
@@ -31,10 +34,10 @@
           </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://medium.com/akroma">
-              <i class="fab fa-lg fa-medium-m"></i>
-            </a>
-          </li>
+          <a class="nav-link" href="https://medium.com/akroma">
+            <i class="fab fa-lg fa-medium-m"></i>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/akroma-project">
             <i class="fab fa-lg fa-github"></i>
