feat(core): add core module and move home component

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,5 +1,3 @@
-<app-navigation></app-navigation>
-
 <section class="section-wrapper hero">
   <div class="container">
     <div class="row">
@@ -31,7 +29,7 @@
   <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
-        <img class="masternodes-img" src="../../assets/images/masternodes.svg" alt="Masternodes">
+        <img class="masternodes-img" src="../../../assets/images/masternodes.svg" alt="Masternodes">
       </div>
       <div class="col-sm">
         <h1>Masternodes</h1>
@@ -60,7 +58,7 @@
         </p>
       </div>
       <div class="col-sm section-image">
-        <img src="../../assets/images/oracles.svg" height="223" alt="oracles">
+        <img src="../../../assets/images/oracles.svg" height="223" alt="oracles">
       </div>
     </div>
   </div>
@@ -70,7 +68,7 @@
   <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
-        <img src="../../assets/images/governance.svg" width="378" height="377" alt="governance">
+        <img src="../../../assets/images/governance.svg" width="378" height="377" alt="governance">
       </div>
       <div class="col-sm">
         <h1>Sustainable Governance</h1>
@@ -165,7 +163,7 @@
         </div>
       </div>
       <div class="col-md-5 py-5 section-image">
-        <img src="../../assets/images/network-details.svg" width="272" alt="network-details">
+        <img src="../../../assets/images/network-details.svg" width="272" alt="network-details">
       </div>
     </div>
   </div>
@@ -181,7 +179,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/eric.png" alt="Eric Polerecky">
+          <img class="card-img-top" src="../../../assets/team/eric.png" alt="Eric Polerecky">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Eric Polerecky</h5>
             <p class="card-text">
@@ -201,7 +199,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/meg.jpg" alt="Megan Mayle">
+          <img class="card-img-top" src="../../../assets/team/meg.jpg" alt="Megan Mayle">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Megan Mayle</h5>
             <p class="card-text">
@@ -218,7 +216,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/stephen.png" alt="Stephen Cavaliere">
+          <img class="card-img-top" src="../../../assets/team/stephen.png" alt="Stephen Cavaliere">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Stephen Cavaliere</h5>
             <p class="card-text">
@@ -241,7 +239,7 @@
     <div class="row justify-content-center mt-2 py-5">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/gun.jpg" alt="Gunveer Natt">
+          <img class="card-img-top" src="../../../assets/team/gun.jpg" alt="Gunveer Natt">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Gunveer Natt</h5>
             <p class="card-text">
@@ -255,7 +253,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/skoller.png" alt="Stephen Koller">
+          <img class="card-img-top" src="../../../assets/team/skoller.png" alt="Stephen Koller">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Stephen Koller</h5>
             <p class="card-text">
@@ -275,7 +273,7 @@
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/ian.jpg" alt="Ian DesJardins">
+          <img class="card-img-top" src="../../../assets/team/ian.jpg" alt="Ian DesJardins">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Ian DesJardins</h5>
             <p class="card-text">
@@ -298,7 +296,7 @@
     <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="../../assets/team/andrew.jpg" alt="Andrew Hainen">
+          <img class="card-img-top" src="../../../assets/team/andrew.jpg" alt="Andrew Hainen">
           <div class="card-body">
             <h5 class="card-title text-nowrap">Andrew Hainen</h5>
             <p class="card-text">
