feat(explorer): add explorer landing page

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,6 +34,12 @@
           <li>
             <a href="https://twitter.com/akroma_io">Twitter</a>
           </li>
+          <li>
+            <a href="https://facebook.com/AkromaIO">Facebook</a>
+          </li>
+          <li>
+            <a href="https://instagram.com/akroma.io">Instagram</a>
+          </li>
         </ul>
       </div>
       <div class="col-sm">
@@ -44,7 +50,7 @@
             <a href="https://wallet.akroma.io/">Web Wallet</a>
           </li>
           <li>
-            <a href="https://explorer.akroma.io">Block Explorer</a>
+            <a routerLink="explorer">Block Explorer</a>
           </li>
           <li>
             <a href="https://stats.akroma.io">Network Stats</a>
