--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,8 +5,8 @@
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
-      aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed">
-      <i class="fa fa-bars" aria-hidden="true"></i>
+      aria-label="Toggle navigation" (click)="toggleCollapse()">
+      <i class="fa fa-inverse fa-bars" aria-hidden="true"></i>
     </button>
 
     <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbar">
@@ -17,8 +17,8 @@
         <li class="nav-item">
           <a class="nav-link" href="https://wallet.akroma.io">Wallet</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://explorer.akroma.io">Explorer</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="explorer">Explorer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://stats.akroma.io">Network</a>
