--- a/src/app/explorer/components/block-overview/block-overview.component.scss
+++ b/src/app/explorer/components/block-overview/block-overview.component.scss
@@ -24,6 +24,7 @@ a:hover {
   background-color: #9B9B9B;
   min-width: 60px;
   min-height: 60px;
+  transition: background-color 0.15s ease-in-out;
 
   @include media-breakpoint-up(md) {
     min-width: 80px;
@@ -46,10 +47,16 @@ a:hover {
   flex: 1 0 0;
 }
 
+.block-number-link {
+  @include media-breakpoint-down(sm) {
+    width: 100%;
+  }
+}
+
 .block-number {
   height: 100%;
   margin-right: 1px;
-  background-image: linear-gradient(0deg, #FFFFFF 0%, #F5F5F5 98%);
+  background-color: #f4f4f4;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -58,8 +65,10 @@ a:hover {
   padding-left: 10px;
   padding-right: 10px;
   min-width: 125px;
+  transition: background-color 0.15s ease-in-out;
 
   @include media-breakpoint-down(sm) {
+    width: 100%;
     min-width: unset;
     flex: 1 0 0;
     justify-content: flex-start;
@@ -74,7 +83,7 @@ a:hover {
   }
 
   &:hover {
-    background-image: linear-gradient(-180deg, rgba(0,0,0,0.20) 0%, #FFFFFF 100%);
+    background-color: rgba(0,0,0,0.10);
   }
 }
 
@@ -87,6 +96,7 @@ a:hover {
   padding-right: 10px;
   color: #fff;
   background-color: #4A4A4A;
+  transition: background-color 0.15s ease-in-out;
 
   @include media-breakpoint-down(sm) {
     display: block;
@@ -151,6 +161,7 @@ a:hover {
   padding: 3px 10px;
   background-color: #5b5b5b;
   color: #fff;
+  transition: background-color 0.15s ease-in-out;
 
   @include media-breakpoint-down(sm) {
     padding-top: 3px;
