--- a/src/app/explorer/components/transaction-overview/transaction-overview.component.scss
+++ b/src/app/explorer/components/transaction-overview/transaction-overview.component.scss
@@ -7,6 +7,12 @@
   background-color: #fff;
 }
 
+a,
+a:hover {
+  color: #333333;
+  text-decoration: none;
+}
+
 .row-grid {
   display: grid;
   grid-template-columns: 60px auto;
@@ -46,20 +52,30 @@
     grid-column-gap: 1px;
   }
 }
-.row-icon {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #9B9B9B;
 
+.row-icon-link {
   @include media-breakpoint-up(md) {
     grid-row-start: 1;
     grid-row-end: span 2;
   }
 }
 
+.row-icon {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9B9B9B;
+  height: 100%;
+  width: 100%;
+  transition: background-color 0.15s ease-in-out;
+
+  &:hover {
+    background-color: #B8B8B8;
+  }
+}
+
 .hash {
-  background-image: linear-gradient(0deg, #fff 0%, #f5f5f5 98%);
+  background-color: #f4f4f4;
   display: inline-flex;
   align-items: center;
   font-weight: 600;
@@ -67,12 +83,31 @@
   padding-left: 10px;
   padding-right: 10px;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
+  transition: background-color 0.15s ease-in-out;
+
+  @include media-breakpoint-only(xs) {
+    justify-content: center;
+  }
 
   @include media-breakpoint-up(xl) {
     font-size: 2rem;
   }
 
+  &:hover {
+    background-color: rgba(0,0,0,0.10);
+  }
+
   > span {
+    @include media-breakpoint-only(xs) {
+      width: 210px;
+    }
+
+    @include media-breakpoint-only(sm) {
+      width: 430px;
+    }
+
     @include media-breakpoint-up(md) {
       max-width: 190px;
     }
@@ -88,6 +123,13 @@
   }
 }
 
+.value-link {
+  @include media-breakpoint-down(sm) {
+    grid-column-start: 1;
+    grid-column-end: span 2;
+  }
+}
+
 .timestamp,
 .value {
   display: inline-flex;
@@ -99,12 +141,18 @@
   padding-right: 10px;
   color: #fff;
   background-color: #4a4a4a;
+  height: 100%;
+  width: 100%;
+  transition: background-color 0.15s ease-in-out;
 
   @include media-breakpoint-down(sm) {
     grid-column-start: 1;
     grid-column-end: span 2;
   }
+}
 
+.value:hover {
+  background-color: #303030;
 }
 
 .amount {
@@ -124,6 +172,13 @@
   padding-right: 10px;
   color: #fff;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
+  transition: background-color 0.15s ease-in-out;
+
+  &:hover {
+    background-color: #303030;
+  }
 
   .text-truncate {
     @include media-breakpoint-down(xs) {
