--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -21,6 +21,8 @@
           <a class="nav-link" href="https://stats.akroma.io">Network</a>
         </li>
       </ul>
+
+      <app-lookup></app-lookup>
     </div>
   </div>
 </nav>
