feat: add whitepaper link to page body

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -20,6 +20,9 @@
           Akroma is a cryptocurrency and application development platform focused on creating a governance model that will reward long-term,
           sustainable development and design.
         </p>
+        <p class="content">
+          Download the <a href="http://bit.ly/2EMQ4E4">Akroma Whitepaper</a>
+        </p>
       </div>
     </div>
   </div>
