--- a/src/app/explorer/pages/transaction-details/transaction-details.component.scss
+++ b/src/app/explorer/pages/transaction-details/transaction-details.component.scss
@@ -47,7 +47,7 @@ a {
 }
 
 .transparent {
-  background-color: rgba(255,255,255,0.3) !important;
+  background-color: rgba(255, 255, 255, 0.3) !important;
 }
 
 .icon {
@@ -71,11 +71,11 @@ a {
     font-size: 1.125rem;
   }
 
+
   &.transparent {
     font-size: 1.125rem;
     color: #fff;
   }
-
 }
 
 .value {
@@ -93,6 +93,7 @@ a {
     font-size: 1.125rem;
   }
 
+
   &.transparent {
     font-weight: 600;
     font-size: 1.125rem;
@@ -101,6 +102,7 @@ a {
   &:nth-of-type(even) {
     background-color: #4a4a4a;
   }
+
   &:nth-of-type(odd) {
     background-color: #5B5B5B;
   }
