feat(home): add a github link, mining pools, and blog section

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -21,7 +21,8 @@
           sustainable development and design.
         </p>
         <p class="content">
-          Download the <a href="http://bit.ly/2EMQ4E4">Akroma Whitepaper</a>
+          Download the
+          <a href="http://bit.ly/2EMQ4E4">Akroma Whitepaper</a>
         </p>
       </div>
     </div>
@@ -37,7 +38,8 @@
       <div class="col-sm">
         <h1>Masternodes</h1>
         <p>
-          Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization incentive. Running a masternode is rewarded with Akroma.
+          Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization incentive.
+          Running a masternode is rewarded with Akroma.
         </p>
 
         <p>
@@ -113,7 +115,8 @@
                     <tr>
                       <td>Total Supply</td>
                       <td class="text-right">
-                          ~ <a class="text-white" style="text-decoration:underline" href="https://medium.com/akroma/akroma-faq-and-ama-674fe45d7dfc">100 million</a>
+                        ~
+                        <a class="text-white" style="text-decoration:underline" href="https://medium.com/akroma/akroma-faq-and-ama-674fe45d7dfc">100 million</a>
                       </td>
                     </tr>
                     <tr>
@@ -172,6 +175,73 @@
   </div>
 </section>
 
+
+<section class="section-wrapper pools">
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-sm">
+        <h1>Mining Pools</h1>
+        <p>
+          The Akroma community managed mining pools.
+        </p>
+        <p>
+          Contact us to have your pool added to our list.
+        </p>
+      </div>
+      <div class="col-sm">
+        <table class="table table-sm">
+          <tbody>
+            <tr>
+              <td>
+                <a href="http://aka.vipool.net">aka.vipool.net</a>
+              </td>
+              <td class="text-right text-nowrap">
+                <a href="http://aka.vipool.net">akroma.minerpool.net</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://akroma.cryptopools.info">akroma.cryptopools.info</a>
+              </td>
+              <td class="text-right text-nowrap">
+                <a href="http://mining.akroma.org">mining.akroma.org</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://clona.ru/">clona.ru</a>
+              </td>
+              <td class="text-right text-nowrap">
+                <a href="http://aka.miningpeon.net">aka.miningpeon.net</a>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <a href="http://akroma.pistolcrypt.com">akroma.pistolcrypt.com</a>
+              </td>
+              <td class="text-right text-nowrap"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+
+<section class="section-wrapper blog">
+  <div class="container">
+    <div class="row justify-content-around">
+      <div class="col-md-6 text-center">
+        <h1>Blog</h1>
+        <p>Coming Soon.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="section-wrapper team">
   <div class="container">
     <div class="row justify-content-around">
@@ -180,7 +250,7 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-md-4">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/eric.png" alt="Eric Polerecky">
           <div class="card-body">
@@ -192,15 +262,17 @@
               <i class="fab fa-discord"></i> detroitpro
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="http://twitter.com/detroitpro">detroitpro</a>
+              <i class="fab fa-twitter"></i>
+              <a href="http://twitter.com/detroitpro">detroitpro</a>
             </p>
             <p class="card-text">
-              <i class="fab fa-github"></i> <a href="http://github.com/detroitpro">detroitpro</a>
+              <i class="fab fa-github"></i>
+              <a href="http://github.com/detroitpro">detroitpro</a>
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/meg.jpg" alt="Megan Mayle">
           <div class="card-body">
@@ -212,12 +284,13 @@
               <i class="fab fa-discord"></i> missmeg703
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/missmeg703">missmeg703</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/missmeg703">missmeg703</a>
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/stephen.png" alt="Stephen Cavaliere">
           <div class="card-body">
@@ -229,18 +302,17 @@
               <i class="fab fa-discord"></i> delasteve
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/stevecavaliere">stevecavaliere</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/stevecavaliere">stevecavaliere</a>
             </p>
             <p class="card-text">
-              <i class="fab fa-github"></i> <a href="http://github.com/delasteve">delasteve</a>
+              <i class="fab fa-github"></i>
+              <a href="http://github.com/delasteve">delasteve</a>
             </p>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row justify-content-center mt-2 py-5">
-      <div class="col-md-4">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/gun.jpg" alt="Gunveer Natt">
           <div class="card-body">
@@ -254,7 +326,10 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+    </div>
+
+    <div class="row justify-content-center mt-2 py-5">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/skoller.png" alt="Stephen Koller">
           <div class="card-body">
@@ -266,15 +341,17 @@
               <i class="fab fa-discord"></i> skoller
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/StephenKoller">StephenKoller</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/StephenKoller">StephenKoller</a>
             </p>
             <p class="card-text">
-              <i class="fab fa-github"></i> <a href="https://github.com/StephenKoller">StephenKoller</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/StephenKoller">StephenKoller</a>
             </p>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/ian.jpg" alt="Ian DesJardins">
           <div class="card-body">
@@ -286,18 +363,18 @@
               <i class="fab fa-discord"></i> codenbrew
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/codenbrew">codenbrew</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/codenbrew">codenbrew</a>
             </p>
             <p class="card-text">
-              <i class="fab fa-github"></i> <a href="https://github.com/iandesj">iandesj</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/iandesj">iandesj</a>
             </p>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-md-4">
+      .
+      <div class="col-md-3 col-sm-6">
         <div class="card">
           <img class="card-img-top" src="../../../assets/team/andrew.jpg" alt="Andrew Hainen">
           <div class="card-body">
@@ -309,10 +386,12 @@
               <i class="fab fa-discord"></i> WaffleHouse
             </p>
             <p class="card-text">
-              <i class="fab fa-twitter"></i> <a href="https://twitter.com/ahainen">ahainen</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/ahainen">ahainen</a>
             </p>
             <p class="card-text">
-              <i class="fab fa-dribbble"></i> <a href="https://dribbble.com/ahainen">ahainen</a>
+              <i class="fab fa-dribbble"></i>
+              <a href="https://dribbble.com/ahainen">ahainen</a>
             </p>
           </div>
         </div>
