--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -55,6 +55,9 @@
           <li>
             <a href="https://stats.akroma.io">Network Stats</a>
           </li>
+          <li>
+            <a href="https://github.com/akroma-project">GitHub</a>
+          </li>
         </ul>
       </div>
     </div>
